# AlienLM-recovery-evals

./: .gitignore  README.md  pyproject.toml
collaborative-attack/: README.md
collaborative-attack/notes/: observer_tokenizer_sweep_n3_k10000_c0p01.md  observer_tokenizer_sweep_paper_notes.md  seedpool_sweep_n3_c0p95_occ3.md  seedpool_sweep_paper_notes.md
collaborative-attack/results/observer_tokenizer_sweep_n3_k10000_c0p01/: run_config.json
collaborative-attack/scripts/: run_known_pairs_sweep.sh  run_minconf_sweep.sh  run_mixed_seed_pool_sweep.py  run_mixed_seed_pool_sweep.sh  run_observer_tokenizer_sweep.py  run_observer_tokenizer_sweep.sh  summarize_known_pairs_results.py  summarize_minconf_results.py  summarize_observer_tokenizer_results.py  summarize_seedpool_results.py
data-volume/: README.md
data-volume/configs/: llama3-8b-alienlm-qwenv2-150k-1epoch.yaml
data-volume/results/: data_volume_main_comparison.json  data_volume_main_comparison.md  data_volume_main_comparison_4runs.json  data_volume_paper_notes.md  data_volume_paper_notes_4runs.md
data-volume/scripts/: build_data_subsets.py  evaluate_model.sh  train_stepmatch_pair.sh  train_subset.sh
failure-analysis/: status-2026-03-29.md
failure-analysis/results/: llama_gsm8k_mbpp_detailed.md  llama_gsm8k_mbpp_paper_notes.md  llama_gsm8k_mbpp_summary.json
failure-analysis/scripts/: analyze_llama_gsm8k_mbpp.py
long-generation/: README.md
long-generation/results/: longbench_core_analysis_detailed.md  longbench_core_paper_notes.md  longbench_task_selection_2026-03-29.md  truthfulqa_gen_analysis_detailed.md  truthfulqa_gen_length_summary.json  truthfulqa_gen_length_summary.md  truthfulqa_gen_paper_notes.md
long-generation/scripts/: run_longbench_core.sh  run_longbench_core_all.sh  run_truthfulqa_gen.sh
notes/: long-generation-plan-2026-03-29.md  repo-context-2026-03-28.md  tokenizer-observations-2026-03-28.md  working-agenda-2026-03-28.md
recovery-attacks/o1-frequency-ngram/: README.md  cleanup_processes.sh  ngram_datasets.py  run_all_experiments.sh  run_evaluation.py
recovery-attacks/o2-known-plaintext-ngram/: README.md  cleanup_processes.sh  ngram_datasets.py  run_all_experiments.sh  run_evaluation.py
recovery-attacks/o2-known-plaintext-ngram/scripts/: run_known_pairs_sweep.sh  run_minconf_sweep.sh  run_mixed_seed_pool_sweep.py  run_mixed_seed_pool_sweep.sh  run_observer_tokenizer_sweep.py  run_observer_tokenizer_sweep.sh  summarize_known_pairs_results.py  summarize_minconf_results.py  summarize_observer_tokenizer_results.py  summarize_seedpool_results.py
recovery-attacks/o2-llm-decoding/: README.md  config.py  debug_single_request.py  llm_attack.py  llm_evaluator.py  prepare_data.py  prepare_data.sh  prepare_tulu3_data.py  run_full_exp_nonparallel.sh  run_full_exp_parallel.sh  run_llm_attack.py  run_single_exp.sh  utils.py
recovery-attacks/o2-mt-nllb/: README.md  TRANSLATOR_TRAINING_README.md  pyproject.toml  requirements.txt  train_translator.py
recovery-attacks/o2-mt-nllb/eval/: README.md  eval.sh  evaluate_translator.py
recovery-attacks/o2-mt-nllb/scripts/: train.sh  train_test.sh  train_translator.sh  train_with_dataset.sh
recovery-attacks/o2-mt-nllb/translator/: __init__.py  build_translator.py
recovery-attacks/o3-weight-based/: README.md  run.sh  weight_based_mapping.py
robustness/data-volume/: README.md
robustness/failure-analysis/: README.md
robustness/long-generation/: README.md
robustness/token-length/: README.md
robustness/vocab-overlap/: README.md
scripts/: README.md  list_outputs.sh  run_eval.sh
src/alienlm_recovery_evals/: __init__.py  cli.py
token-length/: README.md
token-length/results/: original_vs_alien_token_length_summary.json  token_length_detailed_report.md  token_length_summary.json  token_length_summary.md
token-length/scripts/: measure_token_lengths.py
vocab-overlap/: README.md
vocab-overlap/results/: vocab_overlap_summary.json  vocab_overlap_summary.md
vocab-overlap/scripts/: measure_vocab_overlap.py
(+56 files in other folders)
